<resources>
    <string name="app_name">Tike</string>
    <string name="schedule">Расписание</string>
    <string name="inbox">Заявки</string>
    <string name="creation">Создание</string>
    <string name="dialogs">Диалоги</string>
    <string name="profile">Профиль</string>
    <string name="preferences">Настройки</string>
    <string name="friends">Друзья</string>
    <string name="people">Люди</string>
    <string name="participants">Участники</string>
    <string name="creator">Создатель</string>
    <string name="location">Локация</string>

    <string name="calendar">Календарь</string>
    <string name="time">Время</string>
    <string name="edit">Редактировать</string>

    <string name="auth">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="registration_title">Почти готово!</string>

    <string name="today">Сегодня</string>
    <string name="search">Поиск</string>
    <string name="reset">Очистить</string>

    <string name="qr_code">QR Код</string>

    <string name="welcome_title">Добро пожаловать в Tike!</string>
    <string name="welcome_text">Создайте аккаунт или авторизируйтесь, чтобы синхронизировать расписание</string>
    <string name="auth_google">Продолжить с Google</string>

    <string name="question_name">Как тебя зовут?</string>
    <string name="question_nick">Придумай ник</string>
    <string name="question_activities">Чем ты занимаешься?</string>

    <string name="done">Готово!</string>
    <string name="no_events">На этот день планов нет</string>

    <string name="empty">Пусто!</string>
    <string name="add_creator">Добавьте создателя, чтобы\nотобразить события</string>

    <string name="events">События</string>

    <string name="new_event">Новое событие</string>
    <string name="create">Создать</string>
    <string name="add">Добавить</string>
    <string name="join">Присоединиться</string>
    <string name="choose_participants">Выбрано участников: %d</string>
    <string name="choose_creator">Выбрать</string>
    <string name="choose_location">Выбрать место</string>

    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="info">Информация</string>

    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>

    <string name="begin">Начало</string>
    <string name="end">Конец</string>

    <string name="repeat">Повтор</string>

    <string name="hint_title">Новое событие</string>
    <string name="hint_description">Напишите здесь что-нибудь…</string>
    <string name="hint_location">Не указана</string>

    <string name="hint_name">Имя Фамилия</string>
    <string name="hint_nick">nickname</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="error_name_format">Некорректный формат имени</string>
    <string name="error_nick_format">Некорректный формат ника</string>
    <string name="error_nick_exist">Такой ник уже существует</string>
    <string name="error_network">Ошибка загрузки</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_delete">Ошибка удаления</string>
    <string name="error_location">Ошибка получения локации</string>
    <string name="error_permission">Ошибка получения разрешения</string>

    <string name="empty_friends">Нет друзей</string>
    <string name="empty_people">Нет людей</string>
    <string name="empty_participants">Нет участников</string>
    <string name="empty_inbox">Нет заявок</string>
    <string name="empty_vacant_events">Нет свободных событий</string>

    <string name="blocked">Пользователь заблокирован</string>
    <string name="access_denied">Доступ ограничен</string>

    <string name="no_user">Пользователь удалён</string>
    <string name="no_nick">\@deleted</string>

    <string name="confirmation">Подтверждение</string>
    <string name="ask_event_join">Присоединиться к событию?</string>
    <string name="ask_event_delete">Вы уверены, что хотите удалить событие?</string>
    <string name="ask_event_reject">Вы уверены, что хотите отклонить событие?</string>
    <string name="ask_friend_delete">Вы уверены, что хотите удалить пользователя из друзей?</string>
    <string name="ask_user_block">Вы уверены, что хотите заблокировать пользователя?\nОн будет удалён из друзей и скрыт из общего списка</string>

    <string name="reload">Перезагрузить</string>
    <string name="sign_out">Выйти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="share">Поделиться</string>

    <string name="no_title">Без названия</string>
    <string name="no_description">Нет описания</string>

    <string name="no_connection">Отсутствует подключение к сети</string>

    <string name="privacy">Приватность</string>
    <string name="account">Аккаунт</string>

    <string name="blacklist">Чёрный список</string>
    <string name="block">Заблокировать</string>
    <string name="unblock">Разблокировать</string>

    <string name="vacancy_count">Свободно: %d</string>

    <string name="share_profile">С вами поделились контактом в Tike! Его уникальный id: %s</string>
    <string name="share_account">Привет, я использую Tike! Уникальный id моего профиля: %s</string>

    <string name="feature_not_ready">Функция будет доступна позднее</string>

    <string name="deleting">Выполняется удаление</string>

    <string name="add_friend">Добавить в друзья</string>
    <string name="friend">В друзьях</string>
    <string name="accept_request">Принять заявку</string>
    <string name="request_sent">Заявка отправлена</string>

    <string name="pending_friends">Входящие в друзья</string>
    <string name="requesting_friends">Исходящие в друзья</string>
    <string name="pending_in_events">Входящие приглашения</string>
    <string name="pending_out_events">Исходящие приглашения</string>
    <string name="requesting_in_events">Входящие запросы</string>
    <string name="requesting_out_events">Исходящие запросы</string>

    <string name="event_creator">Создатель</string>
    <string name="event_participants">Участники</string>
    <string name="event_pending">Ожидаются</string>
    <string name="event_requesting">Запросили</string>

    <string name="no_network_connection">Нет интернет-соединения</string>
    
    <string name="update_app">Обновите приложение</string>
    <string name="update_app_message">Текущая версия приложения не поддерживается. Вы можете продолжить пользоваться им, однако взаимодействие с сервером будет приостановлено</string>
    <string name="update">Обновить</string>
    <string name="not_now">Не сейчас</string>
    <string name="app_releases">https://github.com/theo-jedi/tike-android/releases</string>
</resources>
