<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/scheduleFragment"
        android:title="@string/schedule"
        android:icon="@drawable/ic_schedule"/>

    <item
        android:id="@+id/inboxFragment"
        android:title="@string/inbox"
        android:icon="@drawable/ic_inbox"/>

    <item
        android:id="@+id/creationFragment"
        android:title="@string/creation"
        android:icon="@drawable/ic_creation"/>

    <item
        android:id="@+id/dialogsFragment"
        android:title="@string/dialogs"
        android:icon="@drawable/ic_dialogs"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>

</menu>