<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/scheduleFragment">

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.theost.tike.ui.fragments.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_scheduleFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>

    <fragment
        android:id="@+id/inboxFragment"
        android:name="com.theost.tike.ui.fragments.InboxFragment"
        android:label="@string/inbox"
        tools:layout="@layout/fragment_inbox">
        <action
            android:id="@+id/action_inboxFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_inboxFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>

    <fragment
        android:id="@+id/addingFragment"
        android:name="com.theost.tike.ui.fragments.AddingFragment"
        android:label="@string/creation"
        tools:layout="@layout/fragment_adding">
        <action
            android:id="@+id/action_addingFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
        <action
            android:id="@+id/action_addingFragment_to_participantsFragment"
            app:destination="@id/participantsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_addingFragment_to_creatorFragment"
            app:destination="@id/creatorFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/participantsFragment"
        android:name="com.theost.tike.ui.fragments.ParticipantsFragment"
        android:label="@string/participants"
        tools:layout="@layout/fragment_participants" />

    <fragment
        android:id="@+id/creatorFragment"
        android:name="com.theost.tike.ui.fragments.CreatorFragment"
        android:label="@string/creator"
        tools:layout="@layout/fragment_creator" />

    <fragment
        android:id="@+id/dialogsFragment"
        android:name="com.theost.tike.ui.fragments.DialogsFragment"
        android:label="@string/dialogs"
        tools:layout="@layout/fragment_dialogs" />

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.theost.tike.ui.fragments.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_accountFragment_to_qrCodeFragment"
            app:destination="@id/qrCodeFragment" />
        <action
            android:id="@+id/action_accountFragment_to_friendsFragment"
            app:destination="@id/friendsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_accountFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.theost.tike.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="uid"
            app:argType="string" />
        <action
            android:id="@+id/action_profileFragment_to_qrCodeFragment"
            app:destination="@id/qrCodeFragment" />
    </fragment>

    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.theost.tike.ui.fragments.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends">
        <action
            android:id="@+id/action_friendsFragment_to_peopleFragment"
            app:destination="@id/peopleFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_friendsFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.theost.tike.ui.fragments.PeopleFragment"
        android:label="@string/people"
        tools:layout="@layout/fragment_people">
        <action
            android:id="@+id/action_peopleFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.theost.tike.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_settingsFragment_to_blacklistFragment"
            app:destination="@id/blacklistFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/blacklistFragment"
        android:name="com.theost.tike.ui.fragments.BlacklistFragment"
        android:label="@string/blacklist"
        tools:layout="@layout/fragment_blacklist">
        <action
            android:id="@+id/action_blacklistFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <dialog
        android:id="@+id/qrCodeFragment"
        android:name="com.theost.tike.ui.fragments.QrCodeFragment"
        android:label="@string/qr_code"
        tools:layout="@layout/fragment_qr_code">
        <argument
            android:name="content"
            app:argType="string" />
    </dialog>

    <dialog
        android:id="@+id/infoFragment"
        android:name="com.theost.tike.ui.fragments.InfoFragment"
        android:label="@string/participants"
        tools:layout="@layout/fragment_info">
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="creator"
            app:argType="string" />
        <action
            android:id="@+id/action_infoFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </dialog>

</navigation>
