<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_event" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/creationSwitchButton"
        style="@style/Theme.Tike.BlueButton.Switch.Right"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="5dp"
        android:enabled="false"
        android:text="@string/create"
        app:layout_constraintEnd_toStartOf="@id/joiningSwitchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joiningSwitchButton"
        style="@style/Theme.Tike.BlueButton.Switch.Left"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:text="@string/join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/creationSwitchButton"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/addingPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creationSwitchButton" />

</androidx.constraintlayout.widget.ConstraintLayout>