<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:collapseIcon="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/registration_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameText"
        style="@style/Theme.Tike.TextView.RobotoMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/question_name"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Theme.Tike.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:helperText=" "
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/nameText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            style="@style/Theme.Tike.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nickText"
        style="@style/Theme.Tike.TextView.RobotoMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/question_nick"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/nameLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickLayout"
        style="@style/Theme.Tike.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:helperText=" "
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/nickText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickInput"
            style="@style/Theme.Tike.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nick"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lifestylesText"
        style="@style/Theme.Tike.TextView.RobotoMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/question_activities"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/nickLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lifestylesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="false"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lifestylesText"
        app:spanCount="2"
        tools:listitem="@layout/item_lifestyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerUserButton"
        style="@style/Theme.Tike.BlueButton.Basic"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/registerUserButton"
        app:layout_constraintEnd_toEndOf="@id/registerUserButton"
        app:layout_constraintStart_toStartOf="@id/registerUserButton"
        app:layout_constraintTop_toTopOf="@id/registerUserButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>